# Obstagoon

./: README.md  pyproject.toml
obstagoon/: cli.py  compare_showdown.py  config.py  normalize.py  pipeline.py  progress.py  trainer_editor.py  trainer_editor.py.bak  validate.py
obstagoon/extract/: c_utils.py  expansion_project.py
obstagoon/extract/parsers/: abilities.py  encounters.py  forms.py  items.py  moves.py  (+5 more)
obstagoon/generate/: showdown.py  site.py
obstagoon/model/: builder.py  schema.py
obstagoon/templates/: abilities_index.html  ability.html  base.html  encounters.html  forms.html  index.html  itemdex_index.html  move.html  moves_index.html  pokedex_index.html  species.html  style.css  trainer.html  trainerdex_index.html  type.html
tests/: test_asset_processing.py  test_builder_regressions.py  test_config_aware.py  test_config_regressions.py  test_forms_base_species.py  test_gen9_mega_alias_regression.py  test_hoenn_dex.py  test_hoenn_dex_project_load.py  test_includes.py  test_itemdex.py  test_macro_species_families.py  test_move_metric_display.py  test_normalize.py  test_placeholder_exclusions.py  test_preprocessor_comments.py  test_realistic_configs_and_forms.py  test_showdown_export.py  test_showdown_export_assets.py  test_showdown_palafin.py  test_sprite_ranking_base_forms.py  test_sprite_selection.py  test_sprites.py  test_stat_macros_and_pikachu_world.py  test_trainer_editor.py  test_trainer_editor_previews.py  test_trainers.py  test_unown_macro_species.py  test_unown_realistic.py  test_upstream_sprite_regressions.py  test_za_mega_regressions.py
